fixed final messages not showing up at the end of the game

--- a/style.css
+++ b/style.css
@@ -130,7 +130,8 @@ details {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  display: none;
+  display: flex;
+  opacity: 0;
 }
 
 #retry {
